--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "JCL 企業級身分驗證後端 API",
   "main": "dist/app.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node src/app.ts",
+    "dev": "npx nodemon --exec ts-node src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
     "test": "jest",
