--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,9 @@
   "description": "JCL 企業級身分驗證前端應用程式",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "npx next dev",
+    "build": "npx next build",
+    "start": "npx next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "test": "jest",
