--- a/backend/package.json
+++ b/backend/package.json
@@ -1,66 +1,42 @@
 {
-  "name": "jcl-auth-backend",
+  "name": "jcl-enterprise-auth-backend",
   "version": "1.0.0",
-  "description": "JCL 企業級身分驗證後端 API",
+  "description": "JCL Enterprise Auth Backend API",
   "main": "dist/app.js",
   "scripts": {
-    "dev": "npx nodemon --exec ts-node src/app.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
     "start": "node dist/app.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "lint": "eslint src/**/*.ts",
-    "lint:fix": "eslint src/**/*.ts --fix"
+    "test": "jest"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "express-slow-down": "^2.0.0",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
     "compression": "^1.7.4",
+    "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
-    "bcrypt": "^5.1.1",
-    "argon2": "^0.31.2",
+    "bcryptjs": "^2.4.3",
     "pg": "^8.11.3",
-    "redis": "^4.6.11",
-    "nodemailer": "^6.9.7",
-    "speakeasy": "^2.0.0",
-    "@webauthn/server": "^9.0.1",
-    "zod": "^3.22.4",
+    "redis": "^4.6.10",
     "winston": "^3.11.0",
-    "express-winston": "^4.2.0",
     "@sentry/node": "^7.81.1",
-    "prom-client": "^15.1.0",
-    "uuid": "^9.0.1",
-    "express-validator": "^7.0.1",
-    "express-async-errors": "^3.1.1",
-    "node-cron": "^3.0.3",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "joi": "^17.11.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/node": "^20.9.0",
     "@types/express": "^4.17.21",
     "@types/cors": "^2.8.17",
     "@types/compression": "^1.7.5",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/bcrypt": "^5.0.2",
-    "@types/pg": "^8.10.9",
-    "@types/nodemailer": "^6.4.14",
-    "@types/speakeasy": "^2.0.10",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/pg": "^8.10.7",
     "@types/uuid": "^9.0.7",
-    "@types/node": "^20.10.0",
-    "@types/node-cron": "^3.0.11",
-    "typescript": "^5.3.2",
-    "ts-node": "^10.9.1",
-    "nodemon": "^3.0.2",
+    "typescript": "^5.2.2",
+    "ts-node-dev": "^2.0.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.8",
-    "ts-jest": "^29.1.1",
-    "eslint": "^8.54.0",
-    "@typescript-eslint/eslint-plugin": "^6.12.0",
-    "@typescript-eslint/parser": "^6.12.0"
-  },
-  "keywords": ["authentication", "jwt", "multi-tenant", "enterprise", "security"],
-  "author": "JCL Enterprise Team",
-  "license": "MIT"
+    "@types/jest": "^29.5.8"
+  }
 }
