--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
     "compression": "^1.7.4",
