--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,8 @@ services:
   pgbouncer:
     image: pgbouncer/pgbouncer:1.21.0
     container_name: jcl-pgbouncer
+    ports:
+      - "6432:6432"
     environment:
       DATABASES_HOST: postgres
       DATABASES_PORT: 5432
@@ -60,6 +62,8 @@ services:
   redis:
     image: redis:7-alpine
     container_name: jcl-redis
+    ports:
+      - "6379:6379"
     command: redis-server --requirepass-file /run/secrets/redis_password --appendonly yes --appendfsync everysec
     volumes:
       - redis_data:/data
