--- a/backend/package.json
+++ b/backend/package.json
@@ -10,34 +10,35 @@
     "test": "jest"
   },
   "dependencies": {
+    "@sentry/node": "^7.81.1",
+    "bcryptjs": "^2.4.3",
+    "better-sqlite3": "^12.2.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "compression": "^1.7.4",
     "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
-    "winston": "^3.11.0",
-    "@sentry/node": "^7.81.1",
-    "dotenv": "^16.3.1",
-    "joi": "^17.11.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.9.0",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/compression": "^1.7.5",
-    "@types/jsonwebtoken": "^9.0.5",
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/node": "^20.9.0",
     "@types/pg": "^8.10.7",
     "@types/uuid": "^9.0.7",
-    "typescript": "^5.2.2",
-    "ts-node-dev": "^2.0.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.8"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
